--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,10 @@ body {
   gap: 20px;
   justify-content: center;
 }
+
+.github {
+  width: 40px;
+  height: 40px;
+  display: inline-block;
+  background: url(./assets/github.svg) no-repeat center / cover;
+}
